<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign up</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="remember_me">Remember me</string>
    <string name="quizzes">Quizzes</string>
    <string name="profile">Profile</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="score">Score: </string>
    <string name="retry">Retry</string>
    <string name="back_home">Back home</string>
    <string name="change_email">Change Email</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="settings">settings</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign out</string>
    <string name="description_forget_password">Please enter your email address</string>
    <string name="send_link">Send Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="delete_account">Delete Account</string>
    <string name="warning">WARNING:</string>
    <string name="warning_description">Are you sure you want to delete your account?</string>
    <string name="yes_delete_my_account">YES, delete my account</string>
    <string name="no_keep_my_account">NO, keep my account</string>
</resources>