<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileFragment">

    <data>
        <variable
            name="viewModel"
            type="com.eminokumus.quizapp.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/userEmailText"
            android:hint="@string/email"
            android:textColorHint="E4E3E3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.userEmail}"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/soft_blue"/>

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.username}"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@color/soft_blue"
            android:hint="@string/username"
            android:textColorHint="#E4E3E3"
            app:layout_constraintTop_toBottomOf="@id/userEmailText"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintTop_toBottomOf="@id/usernameText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>